--- a/resume/index.html
+++ b/resume/index.html
@@ -65,6 +65,16 @@ html:not(.page-trans-loaded) { background-color: #ffffff; }
 
 
 
+
+<script type="text/javascript">
+  window.smartlook||(function(d) {
+    var o=smartlook=function(){ o.api.push(arguments)},h=d.getElementsByTagName('head')[0];
+    var c=d.createElement('script');o.api=new Array();c.async=true;c.type='text/javascript';
+    c.charset='utf-8';c.src='https://web-sdk.smartlook.com/recorder.js';h.appendChild(c);
+    })(document);
+    smartlook('init', '4b5f5ab1330b7546888ba5714487c9a372596527', { region: 'eu' });
+</script>
+
 <script type="text/javascript"> var root = document.getElementsByTagName( "html" )[0]; root.setAttribute( "class", "js" ); </script><style type="text/css">.recentcomments a{display:inline !important;padding:0 !important;margin:0 !important;}</style>
 <style type="text/css" data-type="vc_shortcodes-custom-css">.vc_custom_1653459095509{padding-top: 50px !important;padding-bottom: 50px !important;}.vc_custom_1653454821511{padding-left: 20px !important;}.vc_custom_1653456348900{margin-bottom: 10px !important;padding-left: 20px !important;}</style><noscript><style> .wpb_animate_when_almost_visible { opacity: 1; }</style></noscript></head><body class="page-template-default page page-id-388 ascend wpb-js-composer js-comp-ver-6.7.1 vc_responsive" data-footer-reveal="1" data-footer-reveal-shadow="small" data-header-format="default" data-body-border="off" data-boxed-style="" data-header-breakpoint="1000" data-dropdown-style="minimal" data-cae="easeOutQuart" data-cad="800" data-megamenu-width="full-width" data-aie="zoom-out" data-ls="magnific" data-apte="horizontal_swipe" data-hhun="1" data-fancy-form-rcs="1" data-form-style="minimal" data-form-submit="regular" data-is="minimal" data-button-style="rounded" data-user-account-button="false" data-flex-cols="true" data-col-gap="default" data-header-inherit-rc="false" data-header-search="false" data-animated-anchors="true" data-ajax-transitions="true" data-full-width-header="false" data-slide-out-widget-area="true" data-slide-out-widget-area-style="fullscreen" data-user-set-ocm="off" data-loading-animation="none" data-bg-header="false" data-responsive="1" data-ext-responsive="true" data-ext-padding="90" data-header-resize="0" data-header-color="custom" data-cart="false" data-remove-m-parallax="" data-remove-m-video-bgs="" data-m-animate="0" data-force-header-trans-color="light" data-smooth-scrolling="0" data-permanent-transparent="false">
 	
@@ -154,7 +164,7 @@ html:not(.page-trans-loaded) { background-color: #ffffff; }
 	<div class="container main-content">
 		<div class="row">
 			
-		<div id="fws_6295f46f1bd36" data-column-margin="default" data-midnight="dark" class="wpb_row vc_row-fluid vc_row top-level full-width-section" style="padding-top: 0px; padding-bottom: 0px; "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap"><div class="row-bg viewport-desktop using-bg-color" style="background-color: #0a0a0a; "></div></div></div><div class="row_col_wrap_12 col span_12 dark left">
+		<div id="fws_6295fd93267d9" data-column-margin="default" data-midnight="dark" class="wpb_row vc_row-fluid vc_row top-level full-width-section" style="padding-top: 0px; padding-bottom: 0px; "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap"><div class="row-bg viewport-desktop using-bg-color" style="background-color: #0a0a0a; "></div></div></div><div class="row_col_wrap_12 col span_12 dark left">
 	<div class="vc_col-sm-12 wpb_column column_container vc_column_container col no-extra-padding inherit_tablet inherit_phone " data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 			<div class="wpb_wrapper">
@@ -173,11 +183,11 @@ html:not(.page-trans-loaded) { background-color: #ffffff; }
 		</div>
 	</div> 
 </div></div>
-		<div id="fws_6295f46f1c538" data-column-margin="default" data-midnight="light" class="wpb_row vc_row-fluid vc_row full-width-section" style="padding-top: 10px; padding-bottom: 10px; "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap"><div class="row-bg viewport-desktop using-bg-color" style="background-color: #0a0a0a; "></div></div></div><div class="row_col_wrap_12 col span_12 light left">
+		<div id="fws_6295fd9327029" data-column-margin="default" data-midnight="light" class="wpb_row vc_row-fluid vc_row full-width-section" style="padding-top: 10px; padding-bottom: 10px; "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap"><div class="row-bg viewport-desktop using-bg-color" style="background-color: #0a0a0a; "></div></div></div><div class="row_col_wrap_12 col span_12 light left">
 	<div class="vc_col-sm-12 wpb_column column_container vc_column_container col has-animation no-extra-padding inherit_tablet inherit_phone " data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="fade-in-from-bottom" data-delay="0">
 		<div class="vc_column-inner">
 			<div class="wpb_wrapper">
-				<div id="fws_6295f46f1dd08" data-midnight="" data-column-margin="default" class="wpb_row vc_row-fluid vc_row inner_row" style=""><div class="row-bg-wrap"> <div class="row-bg"></div> </div><div class="row_col_wrap_12_inner col span_12  left">
+				<div id="fws_6295fd9328334" data-midnight="" data-column-margin="default" class="wpb_row vc_row-fluid vc_row inner_row" style=""><div class="row-bg-wrap"> <div class="row-bg"></div> </div><div class="row_col_wrap_12_inner col span_12  left">
 	<div class="vc_col-sm-6 wpb_column column_container vc_column_container col child_column has-animation no-extra-padding inherit_tablet inherit_phone " data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="fade-in-from-bottom" data-delay="50">
 		<div class="vc_column-inner">
 		<div class="wpb_wrapper">
@@ -185,7 +195,7 @@ html:not(.page-trans-loaded) { background-color: #ffffff; }
 		</div> 
 	</div>
 	</div> 
-</div></div><div id="fws_6295f46f1e5b9" data-midnight="" data-column-margin="default" class="wpb_row vc_row-fluid vc_row inner_row" style=""><div class="row-bg-wrap"> <div class="row-bg"></div> </div><div class="row_col_wrap_12_inner col span_12  left">
+</div></div><div id="fws_6295fd9328c59" data-midnight="" data-column-margin="default" class="wpb_row vc_row-fluid vc_row inner_row" style=""><div class="row-bg-wrap"> <div class="row-bg"></div> </div><div class="row_col_wrap_12_inner col span_12  left">
 	<div class="vc_col-sm-12 wpb_column column_container vc_column_container col child_column has-animation no-extra-padding inherit_tablet inherit_phone " data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="fade-in-from-bottom" data-delay="0">
 		<div class="vc_column-inner">
 		<div class="wpb_wrapper">
@@ -202,7 +212,7 @@ html:not(.page-trans-loaded) { background-color: #ffffff; }
 	<div class="vc_col-sm-12 vc_col-xs-12 wpb_column column_container vc_column_container col padding-2-percent inherit_tablet inherit_phone " data-padding-pos="top-bottom" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 			<div class="wpb_wrapper">
-				<div id="fws_6295f46f1f395" data-midnight="" data-column-margin="default" class="wpb_row vc_row-fluid vc_row inner_row vc_row-o-equal-height vc_row-flex vc_row-o-content-middle" style="padding-bottom: 6%; "><div class="row-bg-wrap"> <div class="row-bg"></div> </div><div class="row_col_wrap_12_inner col span_12  left">
+				<div id="fws_6295fd9329a83" data-midnight="" data-column-margin="default" class="wpb_row vc_row-fluid vc_row inner_row vc_row-o-equal-height vc_row-flex vc_row-o-content-middle" style="padding-bottom: 6%; "><div class="row-bg-wrap"> <div class="row-bg"></div> </div><div class="row_col_wrap_12_inner col span_12  left">
 	<div class="vc_col-sm-6 wpb_column column_container vc_column_container col child_column no-extra-padding inherit_tablet inherit_phone " data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 		<div class="wpb_wrapper">
@@ -218,7 +228,7 @@ html:not(.page-trans-loaded) { background-color: #ffffff; }
 		</div> 
 	</div>
 	</div> 
-</div></div><div id="fws_6295f46f1faae" data-midnight="" data-column-margin="default" class="wpb_row vc_row-fluid vc_row inner_row" style=""><div class="row-bg-wrap"> <div class="row-bg"></div> </div><div class="row_col_wrap_12_inner col span_12  left">
+</div></div><div id="fws_6295fd932a1c9" data-midnight="" data-column-margin="default" class="wpb_row vc_row-fluid vc_row inner_row" style=""><div class="row-bg-wrap"> <div class="row-bg"></div> </div><div class="row_col_wrap_12_inner col span_12  left">
 	<div class="vc_col-sm-1/5 wpb_column column_container vc_column_container col child_column no-extra-padding inherit_tablet inherit_phone " data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 		<div class="wpb_wrapper">
@@ -343,7 +353,7 @@ html:not(.page-trans-loaded) { background-color: #ffffff; }
 		</div> 
 	</div>
 	</div> 
-</div></div><div id="fws_6295f46f21f7b" data-midnight="" data-column-margin="default" class="wpb_row vc_row-fluid vc_row inner_row" style=""><div class="row-bg-wrap"> <div class="row-bg"></div> </div><div class="row_col_wrap_12_inner col span_12  left">
+</div></div><div id="fws_6295fd932cbc1" data-midnight="" data-column-margin="default" class="wpb_row vc_row-fluid vc_row inner_row" style=""><div class="row-bg-wrap"> <div class="row-bg"></div> </div><div class="row_col_wrap_12_inner col span_12  left">
 	<div class="vc_col-sm-1/5 wpb_column column_container vc_column_container col child_column no-extra-padding inherit_tablet inherit_phone " data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 		<div class="wpb_wrapper">
